// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@emotion/styled.macro basic 1`] = `
"import styled from '@emotion/styled.macro'

const SomeComponent = styled.div\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled(\\"div\\", {
  label: \\"SomeComponent\\"
})(\\"color:hotpink;\\");"
`;

exports[`@emotion/styled.macro call-expression 1`] = `
"import styled from '@emotion/styled.macro'

const SomeComponent = styled('div')\`
  color: hotpink;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled('div', {
  label: \\"SomeComponent\\"
})(\\"color:hotpink;\\");"
`;

exports[`@emotion/styled.macro multiple-calls 1`] = `
"import styled from '@emotion/styled.macro'

const SomeComponent = styled.div\`
  color: hotpink;
\`

const SomeOtherComponent = styled.button\`
  color: green;
\`


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled(\\"div\\", {
  label: \\"SomeComponent\\"
})(\\"color:hotpink;\\");

const SomeOtherComponent = _styled(\\"button\\", {
  label: \\"SomeOtherComponent\\"
})(\\"color:green;\\");"
`;

exports[`@emotion/styled.macro object 1`] = `
"import styled from '@emotion/styled.macro'

const SomeComponent = styled.div({ color: 'hotpink' })


      ↓ ↓ ↓ ↓ ↓ ↓

import _styled from \\"@emotion/styled-base\\";

const SomeComponent = _styled(\\"div\\", {
  label: \\"SomeComponent\\"
})({
  color: 'hotpink'
});"
`;
